# BAD-AI

./: dockercompose.yml  my_notebook.ipynb  pyproject.toml
aml/aml/: Main.py  VerificationModel.py
aml/pytorch/: dataLoader.py  dataSet.py  main.py  tensor.py
model/: rasa.py  responses.json  sample.py  sample_with_tensor.py
musthave/ch1/: 1-1.py
poetry/: pyproject.toml
