[tool.poetry]
name = "llm"
version = "0.1.0"
description = ""
authors = ["junny <chbe5082@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
nltk = "^3.8.1"
numpy = "^1.26.4"
tensorflow = "^2.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

