[tool.poetry]
name = "poetry"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"

pytorch = "^1.9.0"
torchvision = "^0.10.0"
˚

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

